Fix our team description is invisible

--- a/src/components/home-page/our-team/OurTeam.module.css
+++ b/src/components/home-page/our-team/OurTeam.module.css
@@ -6,6 +6,7 @@
 }
 
 .paragraph {
+  color: #fff;
   margin: 24px auto;
   padding: 0 16px;
 }
